--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,33 @@
 // app global css in SCSS form
+@font-face {
+    font-family: Inter;
+    font-weight: 400;
+    src: url(./fonts/Inter/Inter-Regular.ttf);
+}
+
+@font-face {
+    font-family: Inter;
+    font-weight: 500;
+    src: url(./fonts/Inter/Inter-Medium.ttf);
+}
+
+@font-face {
+    font-family: Inter;
+    font-weight: 700;
+    src: url(./fonts/Inter/Inter-Bold.ttf);
+}
+
+.font-inter-400 {
+    font-family: Inter;
+    font-weight: 400;
+}
+
+.font-inter-500 {
+    font-family: Inter;
+    font-weight: 500;
+}
+
+.font-inter-700 {
+    font-family: Inter;
+    font-weight: 700;
+}
