--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -14,12 +14,12 @@
 
 $primary: #ffffff;
 $secondary: #f5f5f7;
-$accent: #9c27b0;
+$accent: #ff6633;
 
 $dark: #1d1d1d;
 $dark-page: #121212;
 
-$positive: #21ba45;
+$positive: #00cc2d;
 $negative: #c10015;
 $info: #31ccec;
 $warning: #f2c037;
