--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -17,6 +17,18 @@
     src: url(./fonts/Inter/Inter-Bold.ttf);
 }
 
+@font-face {
+    font-family: Inter;
+    font-weight: 800;
+    src: url(./fonts/Inter/Inter-ExtraBold.ttf);
+}
+
+@font-face {
+    font-family: Inter;
+    font-weight: 900;
+    src: url(./fonts/Inter/Inter-Black.ttf);
+}
+
 .font-inter-400 {
     font-family: Inter;
     font-weight: 400;
@@ -30,6 +42,16 @@
 .font-inter-700 {
     font-family: Inter;
     font-weight: 700;
+}
+
+.font-inter-800 {
+    font-family: Inter;
+    font-weight: 800;
+}
+
+.font-inter-900 {
+    font-family: Inter;
+    font-weight: 900;
 }
 // Border radius of q-input elements
 .q-field--outlined .q-field__control {
