fix: replace link to qbtn

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -53,7 +53,14 @@
     font-family: Inter;
     font-weight: 900;
 }
+
 // Border radius of q-input elements
 .q-field--outlined .q-field__control {
     border-radius: 12px;
+}
+
+// Styles for header logo
+body.desktop .logo.q-hoverable:hover > .q-focus-helper {
+    background-color: transparent;
+    opacity: 0;
 }
