feat: add 'add in cart' button

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -74,3 +74,9 @@ body.desktop .logo.q-hoverable:hover > .q-focus-helper {
     background-color: transparent;
     opacity: 0;
 }
+
+.button {
+    font-weight: 500;
+    letter-spacing: 0.2px;
+    border-radius: 12px;
+}
