--- a/src/entities/team-member/ui/styles.module.scss
+++ b/src/entities/team-member/ui/styles.module.scss
@@ -7,4 +7,8 @@
         max-width: 350px;
         max-height: 525px;
     }
+    &__results-list {
+        padding-left: 16px;
+        color: var(--q-accent);
+    }
 }
